--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
+    "styled-components": "^5.1.1",
     "typeface-nunito": "1.1.3"
   },
   "devDependencies": {
