--- a/package.json
+++ b/package.json
@@ -1,55 +1,15 @@
 {
-  "name": "sampratt.dev",
   "private": true,
-  "description": "",
-  "version": "1.0.0",
-  "author": "",
-  "dependencies": {
-    "@emotion/core": "^10.0.28",
-    "@emotion/styled": "^10.0.27",
-    "gatsby": "^2.23.18",
-    "gatsby-image": "^2.4.12",
-    "gatsby-plugin-emotion": "^4.3.9",
-    "gatsby-plugin-manifest": "^2.4.17",
-    "gatsby-plugin-netlify": "^2.3.10",
-    "gatsby-plugin-offline": "^3.2.16",
-    "gatsby-plugin-react-helmet": "^3.3.9",
-    "gatsby-plugin-sharp": "^2.6.17",
-    "gatsby-plugin-styled-components": "^3.3.14",
-    "gatsby-remark-prismjs": "^3.5.9",
-    "gatsby-remark-reading-time": "^1.1.0",
-    "gatsby-source-filesystem": "^2.3.18",
-    "gatsby-transformer-remark": "^2.8.23",
-    "gatsby-transformer-sharp": "^2.5.10",
-    "prism-themes": "^1.4.0",
-    "prismjs": "^1.20.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.1",
-    "styled-components": "^5.1.1",
-    "typeface-nunito": "1.1.3"
-  },
-  "devDependencies": {
-    "prettier": "^2.0.5"
-  },
-  "keywords": [
-    "gatsby"
-  ],
+  "name": "temp",
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write src/**/*.{js,jsx}",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+    "dev": "saber",
+    "build": "saber build"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+  "devDependencies": {
+    "saber": "^0.9.0",
+    "saber-theme-portfolio": "^0.3.0",
+    "saber-plugin-query-posts": "^0.4.2",
+    "saber-plugin-feed": "^0.4.2"
   }
 }
