--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/PaperMod"]
 	path = themes/PaperMod
-	url = https://github.com/adityatelange/hugo-PaperMod.git
+	url = https://github.com/samuel-pratt/hugo-PaperMod.git
+[submodule "theme/PaperMod"]
+	path = theme/PaperMod
+	url = git@github.com:samuel-pratt/hugo-PaperMod.git
