--- a/config.toml
+++ b/config.toml
@@ -104,24 +104,28 @@ name = "Github"
 icon = "fa fa-github"
 weight = 1
 url = "https://github.com/samuel-pratt/"
+target = "_blank"
 
 [[params.social]]
 name = "Twitter"
 icon = "fa fa-twitter"
 weight = 3
 url = "https://twitter.com/_SamPratt/"
+target = "_blank"
 
 [[params.social]]
 name = "LinkedIn"
 icon = "fa fa-linkedin"
 weight = 4
 url = "https://www.linkedin.com/in/sam-pratt-7045401b6/"
+target = "_blank"
 
 [[params.social]]
 name = "Medium"
 icon = "fa fa-medium"
 weight = 5
 url = "https://sjpratt19.medium.com"
+target = "_blank"
 
 #[[params.social]]
 #name = "RSS"
