Added google analytics

--- a/config.toml
+++ b/config.toml
@@ -46,9 +46,7 @@ customSCSS = []
 # Custom JS
 customJS = []
 
-# If you want to use Google Tag Manager(https://analytics.google.com/) for analytics, add this section
-[params.googleTagManager]
-id = "G-4EH83NJ2SB"
+googleAnalytics = "G-4EH83NJ2SB"
 
 # If you want to implement a Content-Security-Policy, add this section
 [params.csp]
