Switched to goatcounter for analytics

--- a/config.toml
+++ b/config.toml
@@ -56,7 +56,7 @@ childsrc = ["'self'"]
 fontsrc = ["'self'", "https://fonts.gstatic.com", "https://cdn.jsdelivr.net/"]
 formaction = ["'self'"]
 framesrc = ["'self'"]
-imgsrc = ["'self'"]
+imgsrc = ["'self'", "https://sampratt.goatcounter.com/"]
 objectsrc = ["'none'"]
 stylesrc = [
   "'self'",
