--- a/config.toml
+++ b/config.toml
@@ -14,7 +14,7 @@ enableEmoji = true
 author = "Sam Pratt"
 description = "Sam Pratt's personal website"
 keywords = "blog,developer,personal,sam,samuel,pratt,software,go,heroku"
-info = ["Full Stack Developer","Go Developer","Samuel Pratt","Sam Pratt"]
+info = ["Full Stack Developer"]
 avatarURL = "images/avatar.png"
 #gravatar = "john.doe@example.com"
 #footerContent = "Enter a text here."
