--- a/content/sections/projects/projects.json
+++ b/content/sections/projects/projects.json
@@ -7,14 +7,14 @@
       "description": "Get real time information for your next BC Ferries voyage with Ferry Times! Know exactly when, where, and how full your next trip will be at the tap of a finger! This app tracks real time data from every major ferry terminal in British Columbia.",
       "tags": [],
       "image": {
-        "src": "../../images/ferries.png",
+        "src": "../../images/ferries_screenshots.png",
         "alt": "BC Ferry Times",
-        "linkTo": "https://ferrytimes.ca"
+        "linkTo": "https://apps.apple.com/ca/app/bc-ferry-times/id1615899209"
       },
       "links": [
         {
           "type": "external",
-          "url": "https://ferrytimes.ca"
+          "url": "https://apps.apple.com/ca/app/bc-ferry-times/id1615899209"
         }
       ]
     }
