--- a/content/sections/projects/projects.json
+++ b/content/sections/projects/projects.json
@@ -7,14 +7,32 @@
       "description": "Get real time information for your next BC Ferries voyage with Ferry Times! Know exactly when, where, and how full your next trip will be at the tap of a finger! This app tracks real time data from every major ferry terminal in British Columbia.",
       "tags": [],
       "image": {
-        "src": "../../images/ferries_screenshots.png",
+        "src": "../../images/bcft.png",
         "alt": "BC Ferry Times",
-        "linkTo": "https://ferrytimes.app"
+        "linkTo": "https://apps.apple.com/ca/app/bc-ferry-times/id1615899209"
       },
       "links": [
         {
           "type": "external",
-          "url": "https://ferrytimes.app"
+          "url": "https://apps.apple.com/ca/app/bc-ferry-times/id1615899209"
+        }
+      ]
+    },
+    {
+      "visible": true,
+      "category": "",
+      "title": "Ferry Watch",
+      "description": "Ferry Watch is the ultimate companion app for anyone who travels by ferry in British Columbia or Washington state. With real-time tracking of all ferries in the region, you'll never miss a sailing or wonder how long you have to wait for the next one.",
+      "tags": [],
+      "image": {
+        "src": "../../images/fw.png",
+        "alt": "BC Ferry Times",
+        "linkTo": "https://apps.apple.com/ca/app/ferry-watch/id6446906912"
+      },
+      "links": [
+        {
+          "type": "external",
+          "url": "https://apps.apple.com/ca/app/ferry-watch/id6446906912"
         }
       ]
     }
